--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>If you'd like to work with us or have any questions, feel free to reach out via email:</p>
+    <p>If you'd like to work with us or have any questions, feel free to reach out at +1 929-299-6832 or via email:</p>
     <p><a href="mailto:edgargarabatoen51@icloud.com" class="btn">Email Us</a></p>
   </section>
 
