--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   <section id="about">
     <h2>About Us</h2>
-    <p>Gigabit Desktop is a professional IT consulting firm dedicated to helping businesses and solo entrepreneurs streamline their technology operations. With expertise in modern IT systems, we provide strategic insights and hands-on support to ensure your company operates at peak performance.</p>
+    <p>Gigabit Desktop is a professional IT consulting firm dedicated to helping businesses and solo entrepreneurs streamline their technology operations. With expertise in modern IT systems, we help firms with domain registrations, web hosting, infrastructure deployment on prem or in the cloud and hands-on support to ensure your company operates at peak performance.</p>
   </section>
   <section id="services">
     <h2>Our Services</h2>
