--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <li>Software & System Integration</li>
       <li>Tech Support & Troubleshooting</li>
     </ul>
-    <img src="https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=1400&q=80" alt="Cloud Technology" class="cloud-img">
+    <img src="hwa.jpg" alt="Cloud Technology" class="cloud-img">
   </section>
 
   <section id="contact">
